refactor: 使用Java现代语法替换传统写法
- switch表达式替换传统switch-case (DataPermissionCheckerFactory, JacksonUtil)
- .getFirst()替换.get(0) (多处)
- try-with-resources替换手动close (FormulaExcelParser)
- 方法引用替换lambda (FormulaModel)